--- a/src/scss/base/_variable.scss
+++ b/src/scss/base/_variable.scss
@@ -14,5 +14,12 @@ $blanco : #ffffff;
 
 body{
     background-color: #FEF46D;
+    
 }
 
+
+//displays media queries 
+$telefono: 468px;
+$tablet: 768px;
+$desktop: 992px;
+$desktopXL: 1200px;
