--- a/build.css/app.css
+++ b/build.css/app.css
@@ -364,21 +364,78 @@ h1 {
 
 .header {
   background-color: #4CB8B3;
+  text-align: center;
 }
 .header h1 {
   color: #ffffff;
 }
+@media (min-width: 768px) {
+  .header .contenido-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem;
+  }
+  .header .contenido-header h1 {
+    margin: 0px;
+  }
+}
 
 .navegacion-principal a {
+  display: block;
+  text-align: center;
+  margin-bottom: 1rem;
   color: #ffffff;
   font-size: 2.4rem;
 }
 .navegacion-principal a:hover {
   color: #FEF46D;
 }
+@media (min-width: 768px) {
+  .navegacion-principal {
+    display: flex;
+    justify-content: space-between;
+    gap: 2rem;
+  }
+  .navegacion-principal a {
+    margin: 0 30px 0 0;
+  }
+}
 .prueba {
   text-transform: uppercase;
   font-size: 2.4rem;
   color: #752F97;
   letter-spacing: 10px;
+}
+
+.video {
+  max-height: 70rem;
+  overflow: hidden;
+  position: relative;
+}
+.video .overlay {
+  position: absolute;
+  background-color: transparent;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.video video {
+  width: 100%;
+  display: block;
+}
+
+.contenido-video {
+  z-index: 10;
+}
+.contenido-video p {
+  background-color: #f53756;
+  display: inline-block;
+  padding: 1rem 2rem;
+  color: #ffffff;
+  font-weight: 700;
+  font-size: 2.4rem;
+  margin: 0;
 }
