--- a/build.css/app.css
+++ b/build.css/app.css
@@ -346,6 +346,7 @@ h1 {
 
 h2 {
   font-size: 3.6rem;
+  color: #ffffff;
 }
 
 h3 {
@@ -356,6 +357,10 @@ h3 {
   width: 95%;
   max-width: 120rem;
   margin: 0 auto;
+}
+
+.h2titulo {
+  color: #ffffff;
 }
 
 h1 {
@@ -384,7 +389,7 @@ h1 {
 .navegacion-principal a {
   display: block;
   text-align: center;
-  margin-bottom: 1rem;
+  margin-bottom: 0;
   color: #ffffff;
   font-size: 2.4rem;
 }
@@ -410,6 +415,7 @@ h1 {
 
 .video {
   max-height: 70rem;
+  min-height: 50rem;
   overflow: hidden;
   position: relative;
 }
@@ -423,12 +429,24 @@ h1 {
   justify-content: center;
 }
 .video video {
-  width: 100%;
   display: block;
+  margin: 0;
+  width: auto;
+  display: block;
+}
+@media (min-width: 992px) {
+  .video video {
+    width: 100%;
+  }
 }
 
 .contenido-video {
   z-index: 10;
+}
+.contenido-video h2 {
+  color: #ffffff;
+  font-size: 7rem;
+  margin: 0;
 }
 .contenido-video p {
   background-color: #f53756;
@@ -438,4 +456,10 @@ h1 {
   font-weight: 700;
   font-size: 2.4rem;
   margin: 0;
+}
+
+.sobre-festival {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  column-gap: 2rem;
 }
