--- a/src/scss/base/_globales.scss
+++ b/src/scss/base/_globales.scss
@@ -33,6 +33,7 @@ h1{
 
 h2{
     font-size: 3.6rem;
+    color: v.$blanco;
 }
 
 h3{
@@ -48,4 +49,7 @@ h3{
     margin: 0 auto;
 }
 
+.h2titulo{
+    color: v.$blanco;
+}
 
