--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -33,7 +33,7 @@
         a{
             display: block;
             text-align: center;
-            margin-bottom: 1rem;
+            margin-bottom: 0;
             color: v.$blanco;
             font-size: 2.4rem;
             &:hover {
