--- a/src/scss/layout/_video.scss
+++ b/src/scss/layout/_video.scss
@@ -3,6 +3,7 @@
 
 .video{
     max-height: 70rem;
+    min-height: 50rem;
     overflow: hidden;
     position: relative;
 
@@ -17,15 +18,23 @@
     }
 
     video{
-        width: 100%;
         display: block;
+        margin: 0;
+        width: auto;
+        display: block;
+       @include mixins.desktop{
+        width: 100%;
+
+       }
     }
 }
 
 .contenido-video{
-    z-index: 10;
+  z-index: 10;
     h2 {
-
+        color: v.$blanco;
+        font-size: 7rem;
+        margin: 0;
     }
 
     p{
