--- a/src/scss/layout/_video.scss
+++ b/src/scss/layout/_video.scss
@@ -32,7 +32,7 @@
 .contenido-video{
   z-index: 10;
     h2 {
-        color: v.$blanco;
+        color: v.$negro;
         font-size: 7rem;
         margin: 0;
     }
